--- a/week-1/python-collections.ipynb
+++ b/week-1/python-collections.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,18 +100,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A VARIABLE'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A variable'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x.capitalize()"
    ]
@@ -127,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,18 +171,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaime\n"
+     ]
+    }
+   ],
    "source": [
     "print(students_list[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# Negative indices start counting from the end.\n",
     "print(answers[-1])"
@@ -186,11 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
    "source": [
-    "#answer here"
+    "#answer here\n",
+    "print(answers[2])"
    ]
   },
   {
@@ -222,21 +269,21 @@
     "# you can change the list multiple ways\n",
     "\n",
     "# you can change a specific item of the list\n",
-    "# answers[1] = False\n",
-    "# print(answers)\n",
+    "answers[1] = False\n",
+    "print(answers)\n",
     "\n",
     "# you can add on to the list\n",
-    "# answers.append(True)\n",
-    "# print(answers)\n",
+    "answers.append(True)\n",
+    "print(answers)\n",
     "\n",
     "# you can delete a part using the index\n",
-    "# del answers[-1]\n",
-    "# print(answers)\n",
+    "del answers[-1]\n",
+    "print(answers)\n",
     "\n",
     "# you can pop off the last part of a list\n",
     "\n",
-    "# answers.pop()\n",
-    "# print(answers)"
+    "answers.pop()\n",
+    "print(answers)"
    ]
   },
   {
@@ -248,11 +295,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jaime', 'Andrew', 'Dilyan', 'Samira', 'Audrey']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#answer here"
+    "students_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Jaime', 'Andrew', 'Dilyan', 'Samira', 'Xristos']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#answer here\n",
+    "students_list.pop()\n",
+    "students_list.append('Xristos')\n",
+    "students_list"
    ]
   },
   {
@@ -266,11 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# answer here\n",
+    "print(len(list_of_lists))\n",
     "\n"
    ]
   },
@@ -283,11 +373,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Jaime', 'Andrew', 'Dilyan', 'Samira', 'Xristos'], ['List', True, 'A', 3], 'a variable']\n"
+     ]
+    }
+   ],
    "source": [
-    "# answer here"
+    "# answer here\n",
+    "print(list_of_lists[2])"
    ]
   },
   {
@@ -300,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,11 +423,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mod 2'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# answer here"
+    "# answer here\n",
+    "mod_tuple[1]"
    ]
   },
   {
@@ -341,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,18 +502,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['subject', 'data_given', 'concepts', 'questions'])\n"
+     ]
+    }
+   ],
    "source": [
     "print(test.keys())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['Corvettes', '06-04-19', ['size', 'horsepower', 'MPG'], {'A': {'question': 'How many people can fit in a Corvette?', 'response_choices': [1, 2, 3, 4], 'answer': 2}, 'B': {'question': 'What is the MPG of a Corvette?', 'response_choices': [15, 20, 25, 30], 'answer': 15}, 'C': {'question': 'How much horsepower does a Corvette have?', 'response_choices': [200, 300, 400, 500], 'answer': 400}}])\n"
+     ]
+    }
+   ],
    "source": [
     "print(test.values())"
    ]
@@ -416,9 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corvettes\n"
+     ]
+    }
+   ],
    "source": [
     "print(test['subject'])\n"
    ]
@@ -432,11 +567,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([{'question': 'How many people can fit in a Corvette?', 'response_choices': [1, 2, 3, 4], 'answer': 2}, {'question': 'What is the MPG of a Corvette?', 'response_choices': [15, 20, 25, 30], 'answer': 15}, {'question': 'How much horsepower does a Corvette have?', 'response_choices': [200, 300, 400, 500], 'answer': 400}])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#answer here"
+    "#answer here\n",
+    "test['questions'].values()"
    ]
   },
   {
@@ -449,9 +596,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'size'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test['concepts'][0]"
    ]
@@ -465,11 +623,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'subject': 'Corvettes',\n",
+       " 'data_given': '06-04-19',\n",
+       " 'concepts': ['size', 'horsepower', 'MPG'],\n",
+       " 'questions': {'A': {'question': 'How many people can fit in a Corvette?',\n",
+       "   'response_choices': [1, 2, 3, 4],\n",
+       "   'answer': 2},\n",
+       "  'B': {'question': 'What is the MPG of a Corvette?',\n",
+       "   'response_choices': [15, 20, 25, 30],\n",
+       "   'answer': 15},\n",
+       "  'C': {'question': 'How much horsepower does a Corvette have?',\n",
+       "   'response_choices': [200, 300, 400, 500],\n",
+       "   'answer': 400}}}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#answer here"
+    "#answer here\n"
    ]
   },
   {
@@ -792,9 +981,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -806,7 +995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
